[metadata]
name=cryptacular
version=1.2
author=Daniel Holth
author-email=dholth@fastmail.fm
summary=A password hashing framework with bcrypt and pbkdf2.
description-file=README.txt
home-page=http://bitbucket.org/dholth/cryptacular
classifier=Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: C
    Topic :: Security :: Cryptography

[files]
packages = cryptacular
    cryptacular.bcrypt
    cryptacular.core
    cryptacular.crypt
    cryptacular.pbkdf2

[nosetests]
where=cryptacular
cover-package=cryptacular
nocapture=1
with-coverage=1
cover-erase=1
with-doctest=1
